elco-salesforce/force-app/main/default/objects/QuoteLineItem/fields/Customer_Circuit_Code__c.field-meta.xml
<CustomField>
  <fullName>Customer_Circuit_Code__c</fullName>
  <label>Customer Circuit Code</label>
  <type>Text</type>
  <length>80</length>
</CustomField>