elco-salesforce/force-app/main/default/objects/QuoteLineItem/fields/Dimensioni_Array__c.field-meta.xml
<CustomField>
  <fullName>Dimensioni_Array__c</fullName>
  <label>Dimensioni Array</label>
  <type>Text</type>
  <length>80</length>
</CustomField>