elco-salesforce/force-app/main/default/objects/QuoteLineItem/fields/Foro_Minimo__c.field-meta.xml
<CustomField>
    <fullName>Foro_Minimo__c</fullName>
    <label>Foro Minimo (mm)</label>
    <description>Diametro foro minimo richiesto in millimetri</description>
    <inlineHelpText>Specificare il diametro del foro minimo in millimetri (es. 0.20)</inlineHelpText>
    <type>Number</type>
    <precision>10</precision>
    <scale>3</scale>
</CustomField>