elco-salesforce/force-app/main/default/objects/QuoteLineItem/fields/Isolamento_Minimo__c.field-meta.xml
<CustomField>
    <fullName>Isolamento_Minimo__c</fullName>
    <label>Isolamento Minimo (mm)</label>
    <description>Isolamento minimo richiesto in millimetri</description>
    <inlineHelpText>Specificare l'isolamento minimo in millimetri (es. 0.15)</inlineHelpText>
    <type>Number</type>
    <precision>10</precision>
    <scale>3</scale>
</CustomField>