elco-salesforce/force-app/main/default/objects/QuoteLineItem/fields/Spessore_Custom_Value__c.field-meta.xml
<CustomField>
  <fullName>Spessore_Custom_Value__c</fullName>
  <label>Spessore Custom Value</label>
  <type>Text</type>
  <length>255</length>
</CustomField>