elco-salesforce/force-app/main/default/objects/QuoteLineItem/fields/Tipologia_Prodotto__c.field-meta.xml
<CustomField>
  <fullName>Tipologia_Prodotto__c</fullName>
  <label>Tipologia Prodotto</label>
  <type>Picklist</type>
  <valueSet>
    <restricted>true</restricted>
    <valueSetDefinition>
      <value><fullName>Rigido</fullName><default>false</default><label>Rigido</label></value>
      <value><fullName>Flessibile</fullName><default>false</default><label>Flessibile</label></value>
      <value><fullName>Rigido-Flessibile</fullName><default>false</default><label>Rigido-Flessibile</label></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>