elco-salesforce/force-app/main/default/objects/QuoteLineItem/validationRules/VR_QLI_01_Materiale_Custom.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_QLI_01_Materiale_Custom</fullName>
    <active>true</active>
    <description>Se Materiale è Custom, il campo Materiale Custom Value deve essere compilato</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Materiale__c, "Custom"),
  ISBLANK(Materiale_Custom_Value__c)
)</errorConditionFormula>
    <errorDisplayField>Materiale_Custom_Value__c</errorDisplayField>
    <errorMessage>Se Materiale = Custom, compilare &quot;Materiale (Custom value)&quot;.</errorMessage>
</ValidationRule>