elco-salesforce/force-app/main/default/objects/QuoteLineItem/validationRules/VR_QLI_02_Spessore_Custom.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_QLI_02_Spessore_Custom</fullName>
    <active>true</active>
    <description>Se Spessore Complessivo è Custom, il campo Spessore Custom Value deve essere compilato</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Spessore_Complessivo__c, "Custom"),
  ISBLANK(Spessore_Custom_Value__c)
)</errorConditionFormula>
    <errorDisplayField>Spessore_Custom_Value__c</errorDisplayField>
    <errorMessage>Se Spessore = Custom, compilare &quot;Spessore (Custom value)&quot;.</errorMessage>
</ValidationRule>