elco-salesforce/force-app/main/default/objects/QuoteLineItem/validationRules/VR_QLI_03_Rame_Custom.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_QLI_03_Rame_Custom</fullName>
    <active>true</active>
    <description>Se Spessore Rame Esterni è Custom, il campo Rame Custom Value deve essere compilato</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Spessore_Rame_Esterni__c, "Custom"),
  ISBLANK(Rame_Custom_Value__c)
)</errorConditionFormula>
    <errorDisplayField>Rame_Custom_Value__c</errorDisplayField>
    <errorMessage>Se Rame = Custom, compilare &quot;Rame (Custom value)&quot;.</errorMessage>
</ValidationRule>